--- a/personal.css
+++ b/personal.css
@@ -70,6 +70,7 @@ img{
 }
 .background{
     text-align: center;
+    color:White;
     background-color: #e83e8c;
     padding: 10px;
     border-radius: 5px;
