--- a/personal.css
+++ b/personal.css
@@ -10,7 +10,7 @@ p{
     margin-top: 6%;
 }
 .half-width{
-    height:100%;
+    height:550px;
     width: 40%;
     float: left;
     margin-left: 5%;
